--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -864,6 +864,9 @@ video {
 .h-2\.5{
   height: 0.625rem;
 }
+.h-20{
+  height: 5rem;
+}
 .h-24{
   height: 6rem;
 }
@@ -908,9 +911,6 @@ video {
 }
 .h-screen{
   height: 100vh;
-}
-.h-40{
-  height: 10rem;
 }
 .max-h-96{
   max-height: 24rem;
@@ -981,6 +981,9 @@ video {
 .w-2\/5{
   width: 40%;
 }
+.w-20{
+  width: 5rem;
+}
 .w-24{
   width: 6rem;
 }
@@ -1044,8 +1047,14 @@ video {
 .w-screen{
   width: 100vw;
 }
-.w-40{
-  width: 10rem;
+.w-2\/3{
+  width: 66.666667%;
+}
+.w-1{
+  width: 0.25rem;
+}
+.w-3\/6{
+  width: 50%;
 }
 .min-w-\[100vw\]{
   min-width: 100vw;
@@ -1119,6 +1128,9 @@ video {
 .max-w-full{
   max-width: 100%;
 }
+.max-w-md{
+  max-width: 28rem;
+}
 .max-w-screen-2xl{
   max-width: 1536px;
 }
@@ -1145,6 +1157,9 @@ video {
 }
 .table-auto{
   table-layout: auto;
+}
+.border-collapse{
+  border-collapse: collapse;
 }
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
@@ -1239,6 +1254,9 @@ video {
 }
 .resize{
   resize: both;
+}
+.list-decimal{
+  list-style-type: decimal;
 }
 .appearance-none{
   appearance: none;
@@ -1366,6 +1384,9 @@ video {
 }
 .overflow-scroll{
   overflow: scroll;
+}
+.overflow-x-auto{
+  overflow-x: auto;
 }
 .overflow-y-auto{
   overflow-y: auto;
@@ -1789,9 +1810,6 @@ video {
 .bg-opacity-80{
   --tw-bg-opacity: 0.8;
 }
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
-}
 .bg-gradient-to-tr{
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
@@ -2017,6 +2035,10 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 .\!pr-7{
   padding-right: 1.75rem !important;
 }
@@ -2083,6 +2105,18 @@ video {
 .pt-px{
   padding-top: 1px;
 }
+.pb-8{
+  padding-bottom: 2rem;
+}
+.pt-6{
+  padding-top: 1.5rem;
+}
+.pr-4{
+  padding-right: 1rem;
+}
+.pr-8{
+  padding-right: 2rem;
+}
 .text-left{
   text-align: left;
 }
@@ -2091,6 +2125,9 @@ video {
 }
 .text-start{
   text-align: start;
+}
+.align-top{
+  vertical-align: top;
 }
 .align-middle{
   vertical-align: middle;
@@ -3733,6 +3770,11 @@ svg#svg-star {
   background-color: rgb(59 130 246 / 0.1);
 }
 
+.hover\:bg-blue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-blue-900:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(30 58 138 / var(--tw-bg-opacity));
@@ -3768,6 +3810,11 @@ svg#svg-star {
 
 .hover\:bg-green-500\/10:hover{
   background-color: rgb(34 197 94 / 0.1);
+}
+
+.hover\:bg-green-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-green-900:hover{
@@ -3883,11 +3930,6 @@ svg#svg-star {
 .hover\:bg-yellow-900:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(113 63 18 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-green-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-80:hover{
